--- a/popupV1/popupV1.html
+++ b/popupV1/popupV1.html
@@ -38,7 +38,7 @@
                     </select>
                 </div>
             </div>
-            <div class="promptList" id="promptList">
+            <div class="promptList">
                 <!-- Prompt list items will be dynamically generated here -->
             </div>
             <div class="pagination">
