--- a/options.html
+++ b/options.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ChatGPT Prompts Manager - Settings</title>
-    <link rel="stylesheet" type="text/css" href="options.css">
+  <title>ChatGPT Prompts Manager Options</title>
+  <link rel="stylesheet" type="text/css" href="options.css">
 </head>
 <body>
-    <h1>Settings</h1>
-    <form id="settings-form">
-        <label for="theme">Theme:</label>
-        <select id="theme">
-            <option value="light">Light</option>
-            <option value="dark">Dark</option>
-        </select>
-        <br>
-        <label for="sort-order">Sort Prompts By:</label>
-        <select id="sort-order">
-            <option value="date">Date</option>
-            <option value="title">Title</option>
-        </select>
-        <br>
-        <button type="submit">Save Settings</button>
-    </form>
-    <script src="options.js"></script>
+  <h1>Options</h1>
+  <h2>Prompts Data</h2>
+  <p>Select a prompts data source:</p>
+  <label>
+    <input type="radio" name="data-source" value="local" checked>
+    Local Storage
+  </label>
+  <label>
+    <input type="radio" name="data-source" value="sync">
+    Sync Storage
+  </label>
+  <h2>Appearance</h2>
+  <p>Select a color scheme:</p>
+  <label>
+    <input type="radio" name="color-scheme" value="light" checked>
+    Light
+  </label>
+  <label>
+    <input type="radio" name="color-scheme" value="dark">
+    Dark
+  </label>
+  <button id="save-options-button">Save Options</button>
+
+  <script src="options.js"></script>
 </body>
 </html>
